fix(ui): jump information after finish animation

--- a/src/ui/pages/CredCardDetails/CredCardDetail.scss
+++ b/src/ui/pages/CredCardDetails/CredCardDetail.scss
@@ -1,3 +1,9 @@
+.cred-card-detail {
+  .page-header {
+    margin-top: 0.625rem;
+  }
+}
+
 .cred-open-animation {
   .card-details-content {
     animation: credExpand 0.7s ease-in-out;
@@ -45,20 +51,43 @@
 
 @media screen and (min-width: 250px) and (max-width: 370px) {
   .cred-details-content {
-    animation: credExpand 0.7s ease-in-out;
+    animation: credMinSizeExpand 0.7s ease-in-out;
 
-    @keyframes credExpand {
+    @keyframes credMinSizeExpand {
       from {
         height: 0;
         overflow-y: hidden;
         opacity: 0;
-        margin-top: -1.326rem;
+        margin-top: -1.25rem;
       }
       to {
         height: 100vh;
         overflow-y: hidden;
         opacity: 1;
-        margin-top: -1.326rem;
+        margin-top: -1.25rem;
+      }
+    }
+  }
+
+  .cred-back-animation {
+    .card-details-content {
+      animation: credMiniSizeCollapse 0.25s ease-in-out;
+      animation-fill-mode: forwards;
+    }
+
+    @keyframes credMiniSizeCollapse {
+      from {
+        height: 100vh;
+        overflow-y: hidden;
+        opacity: 1;
+        margin-top: -1.25rem;
+      }
+
+      to {
+        height: 0;
+        overflow-y: hidden;
+        opacity: 0;
+        margin-top: -1.25rem;
       }
     }
   }
